[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/game_area.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/bottom_menu.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/item.tscn" type="PackedScene" id=3]
[ext_resource path="res://scripts/common.gd" type="Script" id=4]
[ext_resource path="res://scenes/spatial.tscn" type="PackedScene" id=5]
[ext_resource path="res://scripts/game_master.gd" type="Script" id=6]
[ext_resource path="res://scripts/text_systems/dialogue_DB.gd" type="Script" id=7]

[node name="GUI" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="screen" type="HBoxContainer" parent="."]
visible = false
margin_right = 1920.0
margin_bottom = 1080.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="item" parent="screen" instance=ExtResource( 3 )]
margin_bottom = 1080.0

[node name="game_area" parent="screen" instance=ExtResource( 1 )]
margin_bottom = 1080.0

[node name="bottom_menu" parent="." instance=ExtResource( 2 )]
visible = false

[node name="global_ressources" type="Node" parent="."]
script = ExtResource( 4 )

[node name="spatial" parent="." instance=ExtResource( 5 )]

[node name="dialogue_trigger_timer" type="Timer" parent="."]

[node name="dialogue" type="Node" parent="."]
script = ExtResource( 7 )
